initial tempo2-ps

--- a/Tempo2/HomePage.xaml
+++ b/Tempo2/HomePage.xaml
@@ -180,6 +180,9 @@
                         </RadioButton>
                     </Grid>
 
+                    <Button Click="Button_Click">PS</Button>
+                    
+                    
                 </StackPanel>
 
                 <!-- Baseline row -->
