* Better display of delegates * Fixed some accessibility issues

--- a/Tempo2/CommonCommandBar.xaml
+++ b/Tempo2/CommonCommandBar.xaml
@@ -38,6 +38,7 @@
             <AppBarButton Visibility="{x:Bind FilterVisibility, Mode=Oneway}" 
                     x:Name="_filterButton"
                     ToolTipService.ToolTip="Filter results"
+                          AutomationProperties.Name="Filter results"
                     Background="{x:Bind local:HomePage.AdaptiveSettings.FilterBackground, Mode=OneWay}" >
                 <local:DropDownAppBarButtonContent Symbol="Filter" Label="Filter"/>
                 
@@ -97,6 +98,7 @@
             <AppBarButton x:Name="_apiScopeButton"
                           Visibility="{x:Bind IsScopeVisible, Mode=OneWay}"
                           ToolTipService.ToolTip="Choose an API scope" 
+                          AutomationProperties.Name="Choose an API scope"
                           ContextRequested="_apiScopeButton_ContextRequested">
                 <local:DropDownAppBarButtonContent Symbol="Library" 
                                                    Label="{x:Bind local:App.Instance.ApiScopeName, Mode=OneWay}"/>
