--- a/Tempo2/StackListHeaderItem.xaml
+++ b/Tempo2/StackListHeaderItem.xaml
@@ -8,7 +8,8 @@
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
-    Margin="-12,8,-12,0">
+    Margin="-12,8,-12,0"
+    IsTabStop="False">
 
     
 </ListViewHeaderItem>
