--- a/Tempo2/MemberDetailView.xaml
+++ b/Tempo2/MemberDetailView.xaml
@@ -26,7 +26,7 @@
                 <StackPanel Padding="12,0,0,0" >
                     <local:HeadingBar 
                         Heading="{x:Bind MemberVM.FlexibleName, Mode=OneWay}"
-                        SubHeading="{x:Bind MemberVM.DeclaringType.PrettyName, Mode=OneWay}"
+                        SubHeading="{x:Bind MemberVM.DeclaringType.NameThenNamespace, Mode=OneWay}"
                         SubSubHeading="{x:Bind MemberKindString, Mode=OneWay}"
                         IsSubheading="{x:Bind IsSubcontent, Mode=OneWay}" />
 
