--- a/Tempo2/HomePage.xaml
+++ b/Tempo2/HomePage.xaml
@@ -123,6 +123,26 @@
                         </StackPanel>
                     </RadioButton>
 
+                    <RadioButton IsChecked="{x:Bind ((local:App)local:App.Current).IsWin32Scope, Mode=TwoWay}" 
+                                 VerticalAlignment="Top"
+                                 GroupName="Test"
+                                 DoubleTapped="ApiScope_RadioButton_DoubleTapped"
+                                 AccessKey="2">
+                        <StackPanel>
+                            <TextBlock>Win3<Underline>2</Underline></TextBlock>
+                            <TextBlock Margin="0,10,0,0"  TextWrapping="Wrap" >
+                                Search the Win32 API, downloading it from nuget.org<LineBreak/>
+                                Note that this uses the <Hyperlink NavigateUri="https://github.com/microsoft/win32metadata">Win32 Metadata project</Hyperlink>,
+                                which is a metadata representation of the Win32 API and is the source for language projections such as
+                                <Hyperlink NavigateUri="https://github.com/microsoft/CsWin32">CSWin32</Hyperlink> (C#)
+                                and <Hyperlink NavigateUri="https://github.com/microsoft/windows-rs">windows-rs</Hyperlink> (Rust)
+                            </TextBlock>
+                        </StackPanel>
+                    </RadioButton>
+
+
+                    
+                    
                     <!-- Custom API scope -->
                     <Grid VerticalAlignment="Top">
                         <Border Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}"
