Minor visual improvement to AllModelProperties

--- a/Tempo2/AllModelProperties.xaml
+++ b/Tempo2/AllModelProperties.xaml
@@ -18,6 +18,7 @@
                         <Style TargetType="ContentPresenter">
                             <Setter Property="FontWeight" Value="Bold"/>
                             <Setter Property="Padding" Value="5" />
+                            <Setter Property="VerticalAlignment" Value="Top" />
                         </Style>
                     </local:NameValuePanel.FirstStyle>
                 </local:NameValuePanel>
