* Add Win32 teaching tip * Fix search expression error not going away * Add one more IsTextSelectionEnabled

--- a/Tempo2/MemberMore.xaml
+++ b/Tempo2/MemberMore.xaml
@@ -23,6 +23,7 @@
                 <TextBlock local:CsSyntaxGenerator.TypeName="{x:Bind MemberVM.DeclaringType, Mode=OneWay}" />
                 <TextBlock x:Name="_abiName"
                        Text="{x:Bind local:MethodViewModel.CalculateAbiName(MemberVM), Mode=OneWay}"
+                       IsTextSelectionEnabled="True"
                        local:CollapseIfEmpty.IsEnabled="True"/>
 
             </StackPanel>
