--- a/Tempo2/HomePage.xaml
+++ b/Tempo2/HomePage.xaml
@@ -129,7 +129,7 @@
                                  DoubleTapped="ApiScope_RadioButton_DoubleTapped"
                                  AccessKey="2">
                         <StackPanel>
-                            <TextBlock>Win3<Underline>2</Underline></TextBlock>
+                            <TextBlock x:Name="_win32ScopeLabel">Win3<Underline>2</Underline></TextBlock>
                             <TextBlock Margin="0,10,0,0"  TextWrapping="Wrap" >
                                 Search the Win32 API, downloading it from nuget.org<LineBreak/>
                                 Note that this uses the <Hyperlink NavigateUri="https://github.com/microsoft/win32metadata">Win32 Metadata project</Hyperlink>,
