Switch Browse on HomePage from hyperlinks to buttons

--- a/Tempo2/HomePage.xaml
+++ b/Tempo2/HomePage.xaml
@@ -72,24 +72,41 @@
                            Style="{StaticResource SubtitleTextBlockStyle}" />
 
                 <StackPanel Grid.Row="1" Grid.Column="1" 
-                            Margin="0,7,0,0"
-                            Spacing="0"
                             HorizontalAlignment="Left">
 
-                    <TextBlock
-                        ToolTipService.ToolTip="Show all types and members in this API scope (then you can do search from there)">
-                        <Hyperlink Click="ShowAll" >Show everything</Hyperlink>
-                    </TextBlock>
+                    <local:UniformStackPanel Spacing="5" Orientation="Horizontal" >
+                        <Button Click="ShowAll"
+                                ToolTipService.ToolTip="Show all types and members in this API scope (then you can do search from there)">
+                            <StackPanel Orientation="Horizontal" Spacing="8">
+                                <!-- Bulleted list -->
+                                <FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xe8fd;"/>
+                                <TextBlock>Everything</TextBlock>
+                            </StackPanel>
+                        </Button>
 
-                    <TextBlock Margin="{StaticResource VerticalMargin}"
-                               ToolTipService.ToolTip="Navigate types in a hierarchy of namespaces">
-                        <Hyperlink Click="BrowseAll" >Browse by namespace</Hyperlink>
-                    </TextBlock>
+                        <Button Click="ShowNamespaces"
+                                ToolTipService.ToolTip="Navigate types in a hierarchy of namespaces">
+                            <StackPanel Orientation="Horizontal" Spacing="8">
+                                <!-- Relationship symbol is closest I could find to a hierarchy -->
+                                <FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xF003;"/>
+                                <TextBlock>Namespaces</TextBlock>
+                            </StackPanel>
+                        </Button>
 
-                    <TextBlock Margin="{StaticResource VerticalMargin}"
-                               ToolTipService.ToolTip="Search APIs in this scope using PowerShell on Windows (Ctrl+Shift+P)">
-                        <Hyperlink Click="GoToPSClick" >PowerShell</Hyperlink>
-                    </TextBlock>
+                        <Button x:Name="_psButton" Click="GoToPSClick">
+                            <ToolTipService.ToolTip>
+                                <local:ComplexToolTip
+                                            Title="{x:Bind PowerShellTipText.Item1}"
+                                            Subtitle="{x:Bind PowerShellTipText.Item2}"/>
+                            </ToolTipService.ToolTip>
+                            
+                            <StackPanel Orientation="Horizontal" Spacing="8">
+                                <!-- CommandPrompt -->
+                                <FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xe756;"/>
+                                <TextBlock>PowerShell</TextBlock>
+                            </StackPanel>
+                        </Button>
+                    </local:UniformStackPanel>
 
                 </StackPanel>
 
@@ -148,8 +165,8 @@
                     </RadioButton>
 
 
-                    
-                    
+
+
                     <!-- Custom API scope -->
                     <Grid VerticalAlignment="Top">
                         <Border Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}"
